tests/miniJava/neg/006180_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { this java = 0 ; } }
